--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=product-service
 spring.data.mongodb.database=product-service-api
 spring.data.mongodb.uri=mongodb+srv://myxiemy:O1F8WTBpIjIVCP6P@cluster0.kzuyghk.mongodb.net
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
