--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -2,4 +2,6 @@ spring.application.name=product-service
 spring.data.mongodb.database=product-service-api
 spring.data.mongodb.uri=mongodb+srv://myxiemy:O1F8WTBpIjIVCP6P@cluster0.kzuyghk.mongodb.net
 
+server.port=0
+
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
