--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,29 +1,31 @@
 spring.application.name=api-gateway
 server.port=8080
 
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 
 logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
 logging.level.org.springframework.cloud.gateway=TRACE
 
 ## Product service Route
-spring.cloud.gateway.mvc.routes[0].id=product-service
-spring.cloud.gateway.mvc.routes[0].uri=lb://product-service
-spring.cloud.gateway.mvc.routes[0].predicates[0]=Path=/api/v1/product
+spring.cloud.gateway.routes[0].id=product-service
+spring.cloud.gateway.routes[0].uri=lb://product-service
+spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/product
 
 ## Order Service Route
-spring.cloud.gateway.mvc.routes[1].id=order-service
-spring.cloud.gateway.mvc.routes[1].uri=lb://order-service
-spring.cloud.gateway.mvc.routes[1].predicates[0]=Path=/api/v1/order
+spring.cloud.gateway.routes[1].id=order-service
+spring.cloud.gateway.routes[1].uri=lb://order-service
+spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/order
 
 ## Discover Server Route
-spring.cloud.gateway.mvc.routes[2].id=discovery-server
-spring.cloud.gateway.mvc.routes[2].uri=http://localhost:8761
-spring.cloud.gateway.mvc.routes[2].predicates[0]=Path=/eureka/web
-spring.cloud.gateway.mvc.routes[2].filters[0]=SetPath=/
+spring.cloud.gateway.routes[2].id=discovery-server
+spring.cloud.gateway.routes[2].uri=http://localhost:8761
+spring.cloud.gateway.routes[2].predicates[0]=Path=/eureka/web
+spring.cloud.gateway.routes[2].filters[0]=SetPath=/
 
 ## Discover Server Static Resources Route
-spring.cloud.gateway.mvc.routes[3].id=discovery-server-static
-spring.cloud.gateway.mvc.routes[3].uri=http://localhost:8761
-spring.cloud.gateway.mvc.routes[3].predicates[0]=Path=/eureka/**
+spring.cloud.gateway.routes[3].id=discovery-server-static
+spring.cloud.gateway.routes[3].uri=http://localhost:8761
+spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/microservices
