--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -2,4 +2,9 @@ spring.application.name=discovery-server
 eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
+
 server.port=8761
+
+spring.security.user.name=eureka
+spring.security.user.password=password
