--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -8,3 +8,6 @@ server.port=8761
 
 spring.security.user.name=eureka
 spring.security.user.password=password
+
+## Distributed Tracing
+management.tracing.sampling.probability=1.0
