--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 server.port=0
 
 eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
+
+## Distributed Tracing
+management.tracing.sampling.probability=1.0
