--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.data.mongodb.uri=mongodb+srv://myxiemy:O1F8WTBpIjIVCP6P@cluster0.kzuyghk.
 server.port=0
 
 eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
+
+## Distributed Tracing
+management.tracing.sampling.probability=1.0
