microservices event driven with Kafka

--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -9,5 +9,5 @@ server.port=8761
 spring.security.user.name=eureka
 spring.security.user.password=password
 
-## Distributed Tracing
+# Distributed Tracing
 management.tracing.sampling.probability=1.0
