--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -7,28 +7,28 @@ logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
 logging.level.org.springframework.cloud.gateway=TRACE
 
-## Product service Route
+# Product service Route
 spring.cloud.gateway.routes[0].id=product-service
 spring.cloud.gateway.routes[0].uri=lb://product-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/api/v1/product
 
-## Order Service Route
+# Order Service Route
 spring.cloud.gateway.routes[1].id=order-service
 spring.cloud.gateway.routes[1].uri=lb://order-service
 spring.cloud.gateway.routes[1].predicates[0]=Path=/api/v1/order
 
-## Discover Server Route
+# Discover Server Route
 spring.cloud.gateway.routes[2].id=discovery-server
 spring.cloud.gateway.routes[2].uri=http://localhost:8761
 spring.cloud.gateway.routes[2].predicates[0]=Path=/eureka/web
 spring.cloud.gateway.routes[2].filters[0]=SetPath=/
 
-## Discover Server Static Resources Route
+# Discover Server Static Resources Route
 spring.cloud.gateway.routes[3].id=discovery-server-static
 spring.cloud.gateway.routes[3].uri=http://localhost:8761
 spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/microservices
 
-## Distributed Tracing
+# Distributed Tracing
 management.tracing.sampling.probability=1.0
