--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -9,5 +9,5 @@ server.port=0
 
 eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 
-## Distributed Tracing
+# Distributed Tracing
 management.tracing.sampling.probability=1.0
