--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -7,15 +7,15 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.port=0
 
-## Eureka
+# Eureka
 eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 
-## Actuator
+# Actuator
 management.health.circuitbreakers.enabled=true
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
-#Resilinece4j Properties
+# Resilinece4j Properties
 resilience4j.circuitbreaker.instances.inventory.registerHealthIndicator=true
 resilience4j.circuitbreaker.instances.inventory.event-consumer-buffer-size=10
 resilience4j.circuitbreaker.instances.inventory.slidingWindowType=COUNT_BASED
@@ -25,12 +25,19 @@ resilience4j.circuitbreaker.instances.inventory.waitDurationInOpenState=5s
 resilience4j.circuitbreaker.instances.inventory.permittedNumberOfCallsInHalfOpenState=3
 resilience4j.circuitbreaker.instances.inventory.automaticTransitionFromOpenToHalfOpenEnabled=true
 
-#Resilience4J Timeout Properties
+# Resilience4J Timeout Properties
 resilience4j.timelimiter.instances.inventory.timeout-duration=3s
 
-#Resilience4J Retry Properties
+# Resilience4J Retry Properties
 resilience4j.retry.instances.inventory.max-attempts=3
 resilience4j.retry.instances.inventory.wait-duration=5s
 
-## Distributed Tracing
+# Distributed Tracing
 management.tracing.sampling.probability=1.0
+
+# Kafka Properties
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.template.default-topic=notificationTopic
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.type.mapping=event:com.dreamai.orderservice.event.OrderPlacedEvent
